--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
 						Create Organization
 					</div>
 				</div>
+				<div class="actions">
+					<div class="ui red cancel basic inverted button">
+						<i class="remove icon"></i>
+						Cancel
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
