--- a/index.html
+++ b/index.html
@@ -6,10 +6,20 @@
 		<link rel="stylesheet" href="https://semantic-ui.com/dist/semantic.min.css">
 		<script src="https://semantic-ui.com/javascript/library/jquery.min.js"></script>
 		<script src="https://semantic-ui.com/dist/semantic.min.js"></script>
+		<style>
+			.shadowWrapper {
+				box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+				position: fixed;
+				top: 0;
+				left: 0;
+				width: 100%;
+			}
+		</style>
 	</head>
 	<body>
 		<div id="mobileViewport">
 			<div id="groupMviewport">
+				<div class="shadowWrapper">
 				<div class="ui masthead vertical segment" style="border-bottom: 1px solid #dddddd; text-align: center;">
 					<h1 class="ui header">Groups</h1>
 					<button class="ui icon button">
@@ -56,6 +66,7 @@
 						}
 					</script>
 				</div>
+			</div>
 			</div>
 			<div class="ui basic modal" id="newContentConfirm">
 				<div class="ui icon header">
